-fixing authentication with google. -showing login signup screens. - deleting un nessary views

--- a/app.json
+++ b/app.json
@@ -1,4 +1,13 @@
 {
   "name": "MoviesApp",
-  "displayName": "MoviesApp"
+  "displayName": "MoviesApp",
+  "expo": {
+    "android": {
+      "googleServicesFile": "./google-services.json"
+    },
+    "ios": {
+      "googleServicesFile": "./GoogleService-Info.plist"
+    },
+    "plugins": ["@react-native-google-signin/google-signin"]
+  }
 }
