--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-native-firebase/app": "^12.7.3",
     "@react-native-firebase/auth": "^12.7.3",
     "@react-native-firebase/firestore": "^12.7.3",
-    "@react-native-google-signin/google-signin": "^7.0.0-alpha.3",
+    "@react-native-google-signin/google-signin": "^7.2.2",
     "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
